--- a/index.html
+++ b/index.html
@@ -158,6 +158,29 @@
         grid-template-columns: repeat(auto-fit, minmax(220px, 1fr));
       }
 
+      .start-wrap {
+        display: flex;
+        justify-content: center;
+      }
+
+      .start-btn {
+        background: linear-gradient(135deg, #ffffff, #ffe7b0);
+        color: #3a2200;
+        border: none;
+        padding: 18px 28px;
+        font-size: clamp(36px, 4.8vw, 52px);
+        font-weight: 800;
+        border-radius: 18px;
+        cursor: pointer;
+        box-shadow: 0 10px 20px var(--shadow);
+        transition: transform 0.15s ease, box-shadow 0.15s ease;
+      }
+
+      .start-btn:hover {
+        transform: translateY(-3px) scale(1.01);
+        box-shadow: 0 14px 26px var(--shadow);
+      }
+
       .answer-btn {
         padding: 18px 16px;
         border-radius: 18px;
@@ -258,6 +281,9 @@
       <main id="mainCard">
         <div class="question" id="questionText">載入題目中…</div>
         <div class="answers" id="answers"></div>
+        <div class="start-wrap" id="startWrap">
+          <button class="start-btn" id="startBtn">開始</button>
+        </div>
         <div class="status" id="statusText"></div>
       </main>
       <div class="finished" id="finishedText" hidden>題目已全部完成！按「重置」再來一次吧！</div>
@@ -271,6 +297,8 @@
       const wrongCountEl = document.getElementById("wrongCount");
       const resetBtn = document.getElementById("resetBtn");
       const nextBtn = document.getElementById("nextBtn");
+      const startWrap = document.getElementById("startWrap");
+      const startBtn = document.getElementById("startBtn");
       const finishedText = document.getElementById("finishedText");
       const mainCard = document.getElementById("mainCard");
 
@@ -324,10 +352,12 @@
           statusEl.textContent = "";
           finishedText.hidden = false;
           nextBtn.disabled = true;
+          startWrap.hidden = true;
           return;
         }
 
         finishedText.hidden = true;
+        startWrap.hidden = true;
         const idx = Math.floor(Math.random() * remaining.length);
         const item = remaining.splice(idx, 1)[0];
         currentAnswer = item.author;
@@ -393,7 +423,17 @@
         wrongCount = 0;
         correctCountEl.textContent = "0";
         wrongCountEl.textContent = "0";
-        pickQuestion();
+        showReadyState();
+      }
+
+      function showReadyState() {
+        questionEl.textContent = "準備好的話請按開始";
+        answersEl.innerHTML = "";
+        statusEl.textContent = "";
+        statusEl.className = "status";
+        finishedText.hidden = true;
+        startWrap.hidden = false;
+        nextBtn.disabled = true;
       }
 
       function launchFireworks() {
@@ -442,7 +482,8 @@
             questionEl.textContent = "資料不足：至少需要 4 筆作者資料。";
             return;
           }
-          resetGame();
+          remaining = shuffle([...allItems]);
+          showReadyState();
         } catch (err) {
           questionEl.textContent = "讀取資料失敗，請確認 thesis.csv 在同一個資料夾。";
         }
@@ -451,6 +492,12 @@
       resetBtn.addEventListener("click", resetGame);
       nextBtn.addEventListener("click", () => {
         if (!nextBtn.disabled) pickQuestion();
+      });
+      startBtn.addEventListener("click", () => {
+        if (remaining.length > 0) {
+          startWrap.hidden = true;
+          pickQuestion();
+        }
       });
       init();
     </script>
